--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,8 +8,8 @@
         "removeComments": false,
         "noImplicitAny": false,
         "outDir": "build",
-        "typeRoots": [ "./node_modules/@types" ],
-        "types": ["node","cucumber"]
+        //"typeRoots": [ "./node_modules/@types" ],
+        //"types": ["node","cucumber"]
     },
     "exclude": [
         "node_modules",
