--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "generate-contributors": "all-contributors generate",
     "test": "protractor build/config/config.js",
     "webdriver-update": "webdriver-manager update",
-    "webdriver-start": "webdriver-manager start",
+    "webdriver-start": "webdriver-manager start --seleniumPort 2222",
     "go": "npm run build && npm run test"
   },
   "author": "Rafael Berçam <rafael.bercam@conta.mobi>",
@@ -45,8 +45,10 @@
     "cucumber": "^4.2.1",
     "cucumber-html-reporter": "^4.0.3",
     "mkdirp": "^0.5.1",
+    "multiple-cucumber-html-reporter": "^1.11.2",
     "protractor": "^5.3.2",
     "protractor-cucumber-framework": "^5.0.0",
+    "protractor-multiple-cucumber-html-reporter-plugin": "^1.8.0",
     "rimraf": "^2.6.2",
     "ts-node": "^6.0.0",
     "typescript": "^2.8.1"
