--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chai": "^4.1.2",
     "chai-as-promised": "^7.1.1",
     "chai-smoothie": "^0.3.2",
+    "cryptiles": "^4.1.2",
     "cucumber": "^4.2.1",
     "cucumber-html-reporter": "^4.0.3",
     "mkdirp": "^0.5.1",
